--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>webclient</title>
+    <meta name="google-site-verification" content="T29Opta3jd0MrnsXE9tfymkm2puLiwYdDLXFr9GT5kA" />
     <meta charset=utf-8>
   </head>
 
